--- a/public/lessons-content/forensics-metadata.html
+++ b/public/lessons-content/forensics-metadata.html
@@ -51,7 +51,7 @@
     <p>
         Si les timestamps MACE nous donnent le "quand", les métadonnées applicatives nous donnent le "qui", le "comment" et le "où". Pour extraire et interpréter ces informations riches, l'outil <code>ExifTool</code> est la référence mondiale.
     </p>
-    <h3>1. Les documents Microsoft office (.docx, .pptx, etc.)</h3>
+    <h3>1. Les documents Microsoft Office (.docx, .pptx, etc.)</h3>
     <p>Bien plus que de simples conteneurs de texte, les fichiers Office modernes sont de véritables journaux de bord.</p>
     <p>Métadonnées clés :</p>
     <ul>
